--- a/package.json
+++ b/package.json
@@ -11,10 +11,20 @@
   "license": "ISC",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@emotion/css": "^11.7.1",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@reduxjs/toolkit": "^1.8.0",
     "antd": "^4.19.2",
+    "emotion": "^11.0.0",
     "next": "^12.1.0",
+    "next-redux-wrapper": "^7.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-slick": "^0.28.1",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.3.3",
     "typescript": "^4.6.2"
   },
