--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.3.3",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
