--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^1.8.0",
     "antd": "^4.19.2",
     "emotion": "^11.0.0",
+    "immer": "^9.0.12",
     "next": "^12.1.0",
     "next-redux-wrapper": "^7.0.5",
     "react": "^17.0.2",
