--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.8.1",
     "@reduxjs/toolkit": "^1.8.0",
     "antd": "^4.19.2",
+    "axios": "^0.26.1",
     "emotion": "^11.0.0",
     "immer": "^9.0.12",
     "next": "^12.1.0",
@@ -26,6 +27,8 @@
     "react-slick": "^0.28.1",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.3",
     "typescript": "^4.6.2",
     "uuid": "^8.3.2"
